# afl-pt

./: .gitignore  README.md  cfg_size.py  tally.py
afl-2.42b/: Makefile  afl-cov-wrap.sh  afl-fuzz.c  afl-showmap.c  config.h  mk_ramdisk.sh  pt-fuzz-fast.c
afl-2.42b/llvm_call_chain/: .test-instr0  Makefile  afl-clang-callchain.c  afl-llvm-callchain-pass.so.cc  afl-llvm-callchain-rt.o.c  fnmap.txt
afl-2.42b/llvm_mode/: afl-llvm-rt.o.c
afl-2.42b/pt_mode/: Makefile  patch-bin.sh  pt_proxy.c
afl-2.42b/test_progs/: test_loop.c
afl-2.42b/test_progs/cpio-2.12/doc/: Makefile.am  Makefile.in  cpio.texi  gendocs.sh  gendocs_template  mt.1  version.texi
call-trace-analysis/: .tmp_call_trace  CallTraceParser.py  Makefile  README.md  batch_run_wrapper.py  calltrace.txt  example.txt  fnmap.txt
call-trace-analysis/results/: cxxfilt-ptfast.calltrace.analysis  cxxfilt-qemu.calltrace.analysis  djpeg-ptfast2.calltrace.analysis  djpeg-qemu.calltrace.analysis  exif-ptfast.calltrace.analysis  exif-qemu1.calltrace.analysis  nm-ptfast.calltrace.analysis  nm-qemu1.calltrace.analysis  nm-qemu2.calltrace.analysis  png-ptfast.calltrace.analysis  png-qemu.calltrace.analysis  xmllint-ptfast.calltrace.analysis  (+1 more)
docs/: CONTRIBUTING.md  FAQ.md  FUZZING.md  INSTALL.md
glibc-2.25/io/: cscope.files  (+1 more)
native_tally/: example_cmd  native_tally.py  partition.sh
pt/: Makefile  README.md  install_ptmod.sh  proxy.c  proxy_mmap.c  pt.c  pt.h  ptctl.c  reinstall_ptmod.sh
scripts/: README.md  edge-cov-diff.py  extract-timemap.py  tally.py  tally.sh
tools/: README.md  install-beta.sh  install.sh
(+27501 files in other folders)
